tests/language_modules/03_import_resolution/fixtures/invalid/cyclic_import/Banking/Proofs.vf
module Banking.Proofs

import App.Main

function balance_never_negative() returns Boolean
is
    return true
end balance_never_negative

end Banking.Proofs